--- a/sovisback/pom.xml
+++ b/sovisback/pom.xml
@@ -78,6 +78,13 @@
             <artifactId>slf4j-log4j12</artifactId>
             <version>1.7.5</version>
         </dependency>
+        
+        <!--Cors-->
+        <dependency>
+            <groupId>com.thetransactioncompany</groupId>
+            <artifactId>cors-filter</artifactId>
+            <version>1.3.2</version>
+        </dependency>
 		
     </dependencies>
 
