--- a/sovisfront/angular.json
+++ b/sovisfront/angular.json
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/sovisfront",
+            "outputPath": "../sovisback/src/main/webapp/app/",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
